--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
       </fieldset>
     </form>
     <div>These users have input correct information for registration:</div>
-    <ul id="registered-users"></ul>
+	<ul id="registered-users"></ul>
+	
+	<script src="js/jquery-3.4.1.min.js"></script>
   </body>
 </html>
