--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   <title>HPlus Sport</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="script.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
-
 <header id="home" class="header">
+         
+  <!-- BUTTON -->
+          <a id="button"></a>
+
   <nav class="nav" role="navigation">
     <div class="container nav-elements">
       <div class="branding">
-        <a href="#home"><img src="images/hpluslogo.svg" alt="Logo - H Plus Sports"></a>
+        <a href="#home"><img  src="images/hpluslogo.svg" alt="Logo - H Plus Sports" id="logo"></a>
       </div><!-- branding -->
       <ul class="navbar">
         <li><a href="#home">home</a></li>
