--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
          
   <!-- BUTTON -->
           <a id="button"></a>
+          <!-- Add print page button -->
+          <a id="print-button">Print Page</a>
+         
 
   <nav class="nav" role="navigation">
     <div class="container nav-elements">
