--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <header id="home" class="header">
          
   <!-- BUTTON -->
-          <a id="button"></a>
-          <!-- Add print page button -->
+          <a id ="button"></a>
+          <!-- print page button -->
           <a id="print-button">Print Page</a>
+          <!-- Weather button -->
+          <a id="weather-button">Weather</a>
          
 
   <nav class="nav" role="navigation">
