--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     </div>
   </div>
   <div id="popup3" class="overlay">
-    <a class="close" href="#">&times;</a>
+    <a id="close3" class="close" href="#">&times;</a>
     <div class="popup" style="height: 350px; overflow: scroll"> 
       <div id="dialog" class="window">
 
-        <div class="box">
+        <div id="box3" class="box">
           <div class="newletter-title">
             <h2>READ THIS</h2>
           </div>
